; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/dbghelp/extr_storage.c_sparse_array_init.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/dbghelp/extr_storage.c_sparse_array_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sparse_array = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sparse_array_init(%struct.sparse_array* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.sparse_array*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.sparse_array* %0, %struct.sparse_array** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.sparse_array*, %struct.sparse_array** %4, align 8
  %8 = getelementptr inbounds %struct.sparse_array, %struct.sparse_array* %7, i32 0, i32 1
  %9 = load i32, i32* %6, align 4
  %10 = call i32 @vector_init(i32* %8, i32 4, i32 %9)
  %11 = load %struct.sparse_array*, %struct.sparse_array** %4, align 8
  %12 = getelementptr inbounds %struct.sparse_array, %struct.sparse_array* %11, i32 0, i32 0
  %13 = load i32, i32* %5, align 4
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @vector_init(i32* %12, i32 %13, i32 %14)
  ret void
}

declare dso_local i32 @vector_init(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
